actualizacion de la pagina principal

--- a/src/app/components/components.component.html
+++ b/src/app/components/components.component.html
@@ -7,16 +7,13 @@
     <div class="content-center">
       <div class="container">
         <div class="title-brand">
-          <div class="angular-logo">
-            <img src="assets/img/angular2-logo.png" alt="" />
-          </div>
           <h1 class="presentation-title">Sobre Patitas</h1>
-          <div class="fog-low">
+          <!-- <div class="fog-low">
             <img src="assets/img/fog-low.png" alt="" />
           </div>
           <div class="fog-low right">
             <img src="assets/img/fog-low.png" alt="" />
-          </div>
+          </div> -->
         </div>
 
         <h2 class="presentation-subtitle text-center">
