--- a/src/app/examples/signup/signup.component.html
+++ b/src/app/examples/signup/signup.component.html
@@ -18,27 +18,30 @@
                               </a>
                           </div>
                           <form class="register-form">
-                              <label>Email</label>
-                              <div class="input-group form-group-no-border" [ngClass]="{'input-group-focus':focus===true}">
+                              <label>username</label>
+                              <!-- <div class="input-group form-group-no-border" [ngClass]="{'input-group-focus':focus===true}"> -->
+                              <div class="input-group form-group-no-border" >
                                 <div class="input-group-prepend">
                                   <span class="input-group-text">
                                       <i class="nc-icon nc-email-85"></i>
                                   </span>
                                 </div>
 
-                                  <input type="text" class="form-control" placeholder="Email" (focus)="focus=true" (blur)="focus=false" >
+                                  <input [(ngModel)]="usuario.username" type="text" class="form-control" name="username" id="username" placeholder="Username" (focus)="focus=true" (blur)="focus=false" >
                               </div>
 
                               <label>Password</label>
-                              <div class="input-group form-group-no-border" [ngClass]="{'input-group-focus':focus1===true}">
+                              <!-- <div class="input-group form-group-no-border" [ngClass]="{'input-group-focus':focus1===true}"> -->
+                              <div class="input-group form-group-no-border" >
                                 <div class="input-group-prepend">
                                   <span class="input-group-text">
                                       <i class="nc-icon nc-key-25"></i>
                                   </span>
                                 </div>
-                                  <input type="text" class="form-control" placeholder="Password" (focus)="focus1=true" (blur)="focus1=false" >
+                                  <input [(ngModel)]="usuario.password" type="password" class="form-control"
+                                  name="password" id="password" placeholder="Password"(focus)="focus1=true" (blur)="focus1=false" >
                               </div>
-                              <button class="btn btn-danger btn-block btn-round">Register</button>
+                              <button (click)='login()' type="submit" class="btn btn-danger btn-block btn-round">Signup</button>
                           </form>
                           <div class="forgot">
                               <a href="/forgotPassword" class="btn btn-link btn-danger">Forgot password?</a>
@@ -47,7 +50,7 @@
                     </div>
                 </div>
                 <div class="footer register-footer text-center">
-                    <h6>&copy;{{test | date: 'yyyy'}}, made with <i class="fa fa-heart heart"></i> by Creative Tim</h6>
+                    <h6>&copy;{{ 'yyyy'}}, made with <i class="fa fa-heart heart"></i> by Creative Tim</h6>
                 </div>
             </div>
     </div>
