--- a/src/app/components/components.component.html
+++ b/src/app/components/components.component.html
@@ -39,11 +39,11 @@
       <div class="row">
         <div class="col-md-6">
           <h4 class="title text-center">Nuestras Patitas</h4>
-          <ngb-tabset
+          <!-- <ngb-tabset
             [justify]="'center'"
             class="nav justify-content-center tab-space"
           >
-            <ngb-tab>
+            <ngb-tab> -->
               <ng-template ngbTabContent>
                 <div class="row">
                   <div class="col-md-10 ml-auto mr-auto">
@@ -80,16 +80,16 @@
                   </div>
                 </div>
               </ng-template>
-            </ngb-tab>
-          </ngb-tabset>
+            <!-- </ngb-tab>
+          </ngb-tabset> -->
         </div>
         <div class="col-md-6">
             <h4 class="title text-center">Nuestras Zarpitas</h4>
-            <ngb-tabset
+            <!-- <ngb-tabset
               [justify]="'center'"
               class="nav justify-content-center tab-space"
             >
-              <ngb-tab>
+              <ngb-tab> -->
                 <ng-template ngbTabContent>
                   <div class="row">
                     <div class="col-md-10 ml-auto mr-auto">
@@ -126,8 +126,8 @@
                     </div>
                   </div>
                 </ng-template>
-              </ngb-tab>
-            </ngb-tabset>
+              <!-- </ngb-tab>
+            </ngb-tabset> -->
           </div>
       </div>
       <div class="row">
@@ -138,8 +138,8 @@
 
           <div class="nav-tabs-navigation">
             <div class="nav-tabs-wrapper">
-              <ngb-tabset [justify]="'center'">
-                <ngb-tab title="Home">
+              <!-- <ngb-tabset [justify]="'center'">
+                <ngb-tab title="Home"> -->
                   <ng-template ngbTabContent>
                     <p>
                       Larger, yet dramatically thinner. More powerful, but
@@ -147,18 +147,18 @@
                       that seamlessly meets the new Retina HD display.
                     </p>
                   </ng-template>
-                </ngb-tab>
-                <ngb-tab title="Profile">
+                <!-- </ngb-tab>
+                <ngb-tab title="Profile"> -->
                   <ng-template ngbTabContent>
                     <p>Here is your profile.</p>
                   </ng-template>
-                </ngb-tab>
-                <ngb-tab title="Messages">
+                <!-- </ngb-tab>
+                <ngb-tab title="Messages"> -->
                   <ng-template ngbTabContent>
                     <p>Here are your messages.</p>
                   </ng-template>
-                </ngb-tab>
-              </ngb-tabset>
+                <!-- </ngb-tab>
+              </ngb-tabset> -->
             </div>
           </div>
         </div>
@@ -253,9 +253,6 @@
                       placeholder="yyyy-mm-dd"
                       name="dp"
                       [(ngModel)]="model"
-                      ngbDatepicker
-                      #d="ngbDatepicker"
-                      (click)="d.toggle()"
                       (focus)="focus = true"
                       (blur)="focus = false"
                     />
@@ -321,7 +318,7 @@
       <div class="row">
         <div class="col-md-8 mr-auto ml-auto">
           <div class="card page-carousel">
-            <ngb-carousel>
+            <!-- <ngb-carousel> -->
               <ng-template ngbSlide>
                 <img
                   src="../../assets/img/home-backgound.jpg"
@@ -349,7 +346,7 @@
                   <p>Here it is</p>
                 </div>
               </ng-template>
-            </ngb-carousel>
+            <!-- </ngb-carousel> -->
           </div>
         </div>
       </div>
