--- a/src/app/examples/profile/profile.component.html
+++ b/src/app/examples/profile/profile.component.html
@@ -9,7 +9,9 @@
                     <img src="./assets/img/faces/joe-gardner-2.jpg" alt="Circle Image" class="img-circle img-no-padding img-responsive">
                 </div>
                 <div class="name">
-                    <h4 class="title">Jane Faker<br /></h4>
+                     <h4  *ngIf="authService.isAuthenticated()" class="title">
+                        {{authService.usuario.username}} {{authService.usuario.apellido}}
+                      <br /></h4> 
                     <h6 class="description">Music Producer</h6>
                 </div>
             </div>
