change files details

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,8 @@
 <body>
 <app-header></app-header>
 
-<div class="container my-3 wrap">
+<div class="container my-3 wrap" style="
+height: 77vh;">
   <router-outlet></router-outlet>
 </div>
 
