--- a/src/app/directiva/directiva.component.html
+++ b/src/app/directiva/directiva.component.html
@@ -19,12 +19,6 @@
       <div class="container">
         <div class="title-brand">
           <h1 class="presentation-title text-center ">Sobre Patitas</h1>
-          <!-- <div class="fog-low">
-            <img src="assets/img/fog-low.png" alt="" />
-          </div>
-          <div class="fog-low right">
-            <img src="assets/img/fog-low.png" alt="" />
-          </div> -->
         </div>
 
         <h2 class="presentation-subtitle text-center">
@@ -36,5 +30,6 @@
       class="moving-clouds"
       style="background-image: url('assets/img/clouds.png')"
     ></div>
+    <div class="salvafooter"></div>
 
   </div>
